--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "uwstest",
-  "module": "index.ts",
+  "main": "src/index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "start": "bun --hot src/index.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5.0.0"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "reflect-metadata": "^0.2.2",
-    "uWebSockets.js": "uNetworking/uWebSockets.js#v20.52.0"
+    "tsyringe": "^4.8.0",
+    "zod": "^3.23.8"
   }
 }
